--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a-scene embedded arjs="sourceType: webcam;">
 
       <!-- Marker mit 3D-Objekten -->
-      <a-marker type="pattern" url="pattern-Pegasus-pixelig.patt">
+      <a-marker type="pattern" url="pattern-Pegasus.patt">
         <!-- 3D-Würfel -->
         <a-box position="0 0.5 0" color="#4CC3D9" depth="0.5" height="0.5" width="0.5"></a-box>
 
