--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- Marker -->
       <a-marker type="pattern" url="pattern-marker.patt">
         
-        <!-- Inselbild (Plane mit Textur) -->
+        <!-- Inselbild -->
         <a-plane 
           position="0 0.5 0" 
           rotation="0 0 0" 
@@ -26,7 +26,7 @@
 
         <!-- Rückseite mit Text "Schönen Urlaub" -->
         <a-entity position="0 0.5 0" rotation="0 180 0">
-          <a-text value="Schönen Urlaub!" align="center" color="#FF69B4" width="2"></a-text>
+          <a-text value="Einen wundervollen Urlaub!" align="center" color="#FF914D" width="2"></a-text>
         </a-entity>
 
         <!-- Container für Sterne (wie vorher) -->
