--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Inselbild -->
         <a-plane 
           position="0 0.5 0" 
-          rotation="0 1 0" 
+          rotation="0 -20 0" 
           width="1.5" 
           height="1" 
           material="src: #insel; transparent: true">
@@ -50,12 +50,12 @@
 
     <!-- JavaScript -->
     <script>
-      // --- Sterne wie vorher ---
+      // Sterne
       function createStar(x, y, z) {
         return {
           position: `${x} ${y} ${z}`,
           color: "#FFD700",
-          size: 0.05
+          size: 0.01
         };
       }
 
