--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <a href="marker.png" target="_blank">Marker anzeigen</a>
     </div>
 
-    <!-- Inselbild (als PNG) -->
-    <img id="insel" src="insel-mit-palme.png" style="display: none;">
+    <!-- Inselbild -->
+    <img id="insel" src="insel-mit-palme2.png" style="display: none;">
 
     <!-- JavaScript -->
     <script>
